k8s/default-http-backend.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-http-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-http-backend
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      containers:
      - name: default-http-backend
        image: praveenjayakar/error-pages:v3
        ports:
        - containerPort: 8080
        # Add additional container settings as needed
---

apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  selector:
    app: default-http-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
